--- a/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
+++ b/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CommandLine.fs" />
+    <Compile Include="PathEnvironment.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
