--- a/src/BlackFox.Fake.BuildTask/BlackFox.Fake.BuildTask.fsproj
+++ b/src/BlackFox.Fake.BuildTask/BlackFox.Fake.BuildTask.fsproj
@@ -4,10 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Typed `Target` for FAKE</Description>
     <PackageTags>build;FAKE</PackageTags>
+    <Version>0.1</Version>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="paket.references" />
-    <Compile Include="Tasks.fs" />
+    <PackageReference Include="FSharp.Core" Version="4.3.4" />
+    <PackageReference Include="Fake.Core.Target" Version="5.1.0" />
   </ItemGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <None Include="paket.references" />
+    <Compile Include="BuildTask.fs" />
+  </ItemGroup>
 </Project>
