Support more F# Core versions

--- a/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
+++ b/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;$(TargetFrameworks)</TargetFrameworks>
     <Description>Parse and escape command lines</Description>
     <PackageTags>FSharp;CommandLine</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="4.3.4" />
+    <PackageReference Include="FSharp.Core" Version="[4.0.0.1,5.0)" Condition="'$(TargetFramework)' == 'net45'" />
+    <PackageReference Include="FSharp.Core" Version="[4.2.3,5.0)" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLine.fs" />
