--- a/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
+++ b/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
@@ -7,8 +7,8 @@
     <PackageTags>FSharp;CommandLine</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="[4.0.0.1,5.0)" Condition="'$(TargetFramework)' == 'net45'" />
-    <PackageReference Include="FSharp.Core" Version="[4.2.3,5.0)" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
+    <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
+    <PackageReference Include="FSharp.Core" Version="4.2.3" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLine.fs" />
