--- a/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
+++ b/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FSharp.Core" Version="4.2.3" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsvcrCommandLine.fs" />
     <Compile Include="CommandLine.fs" />
   </ItemGroup>
 </Project>
