--- a/src/BlackFox.JavaPropertiesFile/BlackFox.JavaPropertiesFile.fsproj
+++ b/src/BlackFox.JavaPropertiesFile/BlackFox.JavaPropertiesFile.fsproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;$(TargetFrameworks)</TargetFrameworks>
-    <Description>Parse JAVA .properties files</Description>
-    <PackageTags>FSharp;Java;properties</PackageTags>
+    <Description>An F# module to parse Java .properties files</Description>
+    <PackageTags>FSharp;F#;Java;properties</PackageTags>
+    <PackageIconUrl>https://raw.githubusercontent.com/vbfox/FoxSharp/master/src/BlackFox.JavaPropertiesFile/Icon.png</PackageIconUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
