--- a/src/BlackFox.VsWhere/BlackFox.VsWhere.fsproj
+++ b/src/BlackFox.VsWhere/BlackFox.VsWhere.fsproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;$(TargetFrameworks)</TargetFrameworks>
     <Description>Locate Visual Studio 2017 and newer installations</Description>
+    <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.VsWhere</PackageProjectUrl>
     <PackageTags>FSharp;Visual Studio</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/vbfox/FoxSharp/master/src/BlackFox.VsWhere/Icon.png</PackageIconUrl>
   </PropertyGroup>
