--- a/src/BlackFox.JavaPropertiesFile/BlackFox.JavaPropertiesFile.fsproj
+++ b/src/BlackFox.JavaPropertiesFile/BlackFox.JavaPropertiesFile.fsproj
@@ -5,6 +5,7 @@
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;$(TargetFrameworks)</TargetFrameworks>
     <Description>An F# module to parse Java .properties files</Description>
     <PackageTags>FSharp;F#;Java;properties</PackageTags>
+    <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.JavaPropertiesFile</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/vbfox/FoxSharp/master/src/BlackFox.JavaPropertiesFile/Icon.png</PackageIconUrl>
   </PropertyGroup>
   <ItemGroup>
