--- a/src/BlackFox.PathEnvironment/BlackFox.PathEnvironment.fsproj
+++ b/src/BlackFox.PathEnvironment/BlackFox.PathEnvironment.fsproj
@@ -5,6 +5,7 @@
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;$(TargetFrameworks)</TargetFrameworks>
     <Description>Parse PATH environment variable and find programs on it</Description>
     <PackageTags>FSharp;Path;Environment</PackageTags>
+    <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.PathEnvironment</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
