Configure spellright for markdown

--- a/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
+++ b/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
@@ -15,5 +15,7 @@
   <ItemGroup>
     <Compile Include="MsvcrCommandLine.fs" />
     <Compile Include="CommandLine.fs" />
+    <Compile Include="MonoUnixCommandLine.fs" />
+    <Compile Include="DotnetCoreUnixCommandLine.fs" />
   </ItemGroup>
 </Project>
