Add tests around Mono / .NET Core command line parsing

--- a/src/BlackFox.FoxSharp.Tests/BlackFox.FoxSharp.Tests.fsproj
+++ b/src/BlackFox.FoxSharp.Tests/BlackFox.FoxSharp.Tests.fsproj
@@ -9,10 +9,13 @@
   <ItemGroup>
     <Compile Include="JavaPropertiesFileTests.fs" />
     <Compile Include="MsvcrCommandLineTests.fs" />
+    <Compile Include="MonoUnixCommandLineTests.fs" />
+    <Compile Include="DotnetCoreUnixCommandLineTests.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlackFox.CommandLine\BlackFox.CommandLine.fsproj" />
+    <ProjectReference Include="..\BlackFox.CommandLine.TestParsers\BlackFox.CommandLine.TestParsers.csproj" />
     <ProjectReference Include="..\BlackFox.JavaPropertiesFile\BlackFox.JavaPropertiesFile.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
