CmdLine.concat changed to be similar to standard modules
(Breaking change, see https://github.com/fsharp/FAKE/pull/2206 for the confusion created by the previous API)

--- a/src/BlackFox.FoxSharp.Tests/BlackFox.FoxSharp.Tests.fsproj
+++ b/src/BlackFox.FoxSharp.Tests/BlackFox.FoxSharp.Tests.fsproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="JavaPropertiesFileTests.fs" />
+    <Compile Include="CmdLineTests.fs" />
     <Compile Include="MsvcrCommandLineTests.fs" />
     <Compile Include="MonoUnixCommandLineTests.fs" />
     <Compile Include="DotnetCoreUnixCommandLineTests.fs" />
