Mark test project as such

--- a/src/BlackFox.FoxSharp.Tests/BlackFox.FoxSharp.Tests.fsproj
+++ b/src/BlackFox.FoxSharp.Tests/BlackFox.FoxSharp.Tests.fsproj
@@ -5,6 +5,7 @@
     <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net461;$(TargetFrameworks)</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="JavaPropertiesFileTests.fs" />
