--- a/src/BlackFox.PathEnvironment/BlackFox.PathEnvironment.fsproj
+++ b/src/BlackFox.PathEnvironment/BlackFox.PathEnvironment.fsproj
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;$(TargetFrameworks)</TargetFrameworks>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
     <Description>Parse PATH environment variable and find programs on it</Description>
     <PackageTags>FSharp;Path;Environment</PackageTags>
     <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.PathEnvironment</PackageProjectUrl>
@@ -10,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
     <PackageReference Include="FSharp.Core" Version="4.2.3" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0-preview.1" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PathEnvironment.fs" />
