--- a/.az-pipelines.yml
+++ b/.az-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
 - job: Windows
   pool:
-    vmImage: 'vs2017-win2016'
+    vmImage: 'windows-2019'
   steps:
   - script: paket.exe restore
     displayName: Restore packages
