Add a class with both value and type cache that can be passed around

--- a/src/BlackFox.CachedFSharpReflection/BlackFox.CachedFSharpReflection.fsproj
+++ b/src/BlackFox.CachedFSharpReflection/BlackFox.CachedFSharpReflection.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="DictCache.fs" />
     <Compile Include="FSharpTypeCache.fs" />
     <Compile Include="FSharpValueCache.fs" />
+    <Compile Include="FSharpReflectionCache.fs" />
   </ItemGroup>
 
 </Project>
