--- a/src/BlackFox.VsWhere/BlackFox.VsWhere.fsproj
+++ b/src/BlackFox.VsWhere/BlackFox.VsWhere.fsproj
@@ -7,7 +7,11 @@
     <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.VsWhere</PackageProjectUrl>
     <PackageTags>FSharp;Visual Studio</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/vbfox/FoxSharp/master/src/BlackFox.VsWhere/Icon.png</PackageIconUrl>
+    <PackageIcon>Icon.png</PackageIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="Icon.png" Pack="true" PackagePath="\"/>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
     <PackageReference Include="FSharp.Core" Version="4.2.3" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
