--- a/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
+++ b/src/BlackFox.CommandLine/BlackFox.CommandLine.fsproj
@@ -6,11 +6,14 @@
     <Description>Parse and escape command lines</Description>
     <PackageTags>FSharp;CommandLine</PackageTags>
     <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.CommandLine</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/vbfox/FoxSharp/master/src/BlackFox.CommandLine/Icon.png</PackageIconUrl>
+    <PackageIcon>Icon.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
     <PackageReference Include="FSharp.Core" Version="4.2.3" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Icon.png" Pack="true" PackagePath=""/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MsvcrCommandLine.fs" />
