--- a/src/BlackFox.JavaPropertiesFile/BlackFox.JavaPropertiesFile.fsproj
+++ b/src/BlackFox.JavaPropertiesFile/BlackFox.JavaPropertiesFile.fsproj
@@ -6,11 +6,14 @@
     <Description>An F# module to parse Java .properties files</Description>
     <PackageTags>FSharp;F#;Java;properties</PackageTags>
     <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.JavaPropertiesFile</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/vbfox/FoxSharp/master/src/BlackFox.JavaPropertiesFile/Icon.png</PackageIconUrl>
+    <PackageIcon>Icon.png</PackageIcon>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
     <PackageReference Include="FSharp.Core" Version="4.2.3" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Icon.png" Pack="true" PackagePath=""/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types.fs" />
