--- a/src/BlackFox.VsWhere/BlackFox.VsWhere.fsproj
+++ b/src/BlackFox.VsWhere/BlackFox.VsWhere.fsproj
@@ -6,16 +6,16 @@
     <Description>Locate Visual Studio 2017 and newer installations</Description>
     <PackageProjectUrl>https://github.com/vbfox/FoxSharp/tree/master/src/BlackFox.VsWhere</PackageProjectUrl>
     <PackageTags>FSharp;Visual Studio</PackageTags>
-    <PackageIconUrl>https://raw.githubusercontent.com/vbfox/FoxSharp/master/src/BlackFox.VsWhere/Icon.png</PackageIconUrl>
+    <PackageIcon>Icon.png</PackageIcon>
     <PackageIcon>Icon.png</PackageIcon>
   </PropertyGroup>
-  <ItemGroup>
-    <None Include="Icon.png" Pack="true" PackagePath="\"/>
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.0.0.1" Condition="'$(TargetFramework)' == 'net45'" />
     <PackageReference Include="FSharp.Core" Version="4.2.3" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Icon.png" Pack="true" PackagePath=""/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComTypes.fs" />
