--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_NOLOGO: 1
+      PAKET_SKIP_RESTORE_TARGETS: true
     steps:
     - uses: actions/checkout@v2
     - name: Restore packages
@@ -27,10 +28,11 @@ jobs:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_NOLOGO: 1
+      PAKET_SKIP_RESTORE_TARGETS: true
     steps:
     - uses: actions/checkout@v2
     - name: Restore packages
-      run: ./paket.exe restore
+      run: ./paket.cmd restore
     - name: Compile build script
       run: dotnet build src/BlackFox.FoxSharp.Build/BlackFox.FoxSharp.Build.fsproj
     - name: Build
